CONFJIRA-51 Fixed alignment problems in Clickr theme. Caused by the padding added by clickr theme to <td> tags.

--- a/src/main/resources/templates/extra/jira/flexigrid-custom.css
+++ b/src/main/resources/templates/extra/jira/flexigrid-custom.css
@@ -120,6 +120,7 @@ div.colCopy {
 }
 
 .flexigrid div.bDiv td {
+    padding: 0px;
     border-bottom: 1px solid #ccc;
 }
 
